# view_training

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
logs/mlruns/0/: meta.yaml
logs/mlruns/707557733372131807/: meta.yaml
logs/mlruns/707557733372131807/500b2946f3a14e8e924967481b1111c6/: meta.yaml
logs/mlruns/707557733372131807/500b2946f3a14e8e924967481b1111c6/metrics/: final_accuracy  final_loss  test_accuracy  train_loss
logs/mlruns/707557733372131807/bc2beffa28864615bf08e063d132e946/: meta.yaml
logs/mlruns/707557733372131807/bc2beffa28864615bf08e063d132e946/metrics/: final_accuracy  final_loss  test_accuracy  train_loss
logs/mlruns/707557733372131807/bc2beffa28864615bf08e063d132e946/params/: model
logs/mlruns/707557733372131807/c8b7bbe0534b46b4b8e2f6bd80e048e1/: meta.yaml
logs/mlruns/707557733372131807/c8b7bbe0534b46b4b8e2f6bd80e048e1/metrics/: final_accuracy  final_loss  test_accuracy  train_loss
logs/mlruns/707557733372131807/d584b2ba0c6242669c02a26be850c9f4/: meta.yaml
logs/mlruns/707557733372131807/f9f56d8702784c0d9e748d5d5b8ea187/: meta.yaml
logs/tensorboard/efficientnet_b0/: events.out.tfevents.1744338274.b45d6ab284ac.8121.1
logs/tensorboard/mobilenetv3_small_050/: events.out.tfevents.1744338505.b45d6ab284ac.8121.2
logs/tensorboard/resnet18/: events.out.tfevents.1744338098.b45d6ab284ac.8121.0  events.out.tfevents.1744338732.b45d6ab284ac.32758.0  events.out.tfevents.1744339686.b45d6ab284ac.43003.0
utils/: mlflow_utils.py  tensorboard_utils.py  training.py  visualization.py
(+6 files in other folders)
