[project]
name = "view-training"
version = "0.1.0"
description = ""
authors = [
    {name = "sontyubo"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch (==2.1.1)",
    "torchvision (==0.16.1)",
    "torchaudio (==2.1.1)",
    "timm (>=1.0.15,<2.0.0)",
    "numpy (<2)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
packages = [
    { include = "utils"},
]
[[tool.poetry.source]]
name = "torch_cu121"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"


[tool.poetry.dependencies]
torch = {source = "torch_cu121"}
torchvision = {source = "torch_cu121"}
torchaudio = {source = "torch_cu121"}
